--- a/assignment5_starter.ipynb
+++ b/assignment5_starter.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-validation scores: [0.7827393099966703, 0.819753998373543, 0.8114446802742773, 0.7861315496098105, 0.8229182427660009]\n",
-      "Mean ROC AUC score: 0.8045975562040603\n",
-      "Best parameters: {'k': 11, 'distance_metric': 'manhattan'}\n",
-      "Best ROC AUC score: 0.8611916316802983\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'score' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-adf063bb0024>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[1;31m# Perform cross-validation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 90\u001b[1;33m \u001b[0mcv_scores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_validate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mknn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     91\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Cross-validation scores:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv_scores\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-adf063bb0024>\u001b[0m in \u001b[0;36mcross_validate\u001b[1;34m(X, y, knn, n_splits)\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m         \u001b[0my_est_prob\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mest_probability\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m         \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_est_prob\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m         \u001b[0mscores\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'score' referenced before assignment"
      ]
     }
    ],
@@ -29,6 +31,14 @@
     "        self.X_train = X\n",
     "        self.y_train = y\n",
     "\n",
+    "    def compute_distance(self, X1, X2):\n",
+    "        if self.distance_metric == 'euclidean':\n",
+    "            return np.linalg.norm(X2 - X1, axis=1)  # Use numpy's built-in norm for clarity\n",
+    "        elif self.distance_metric == 'manhattan':\n",
+    "            return np.sum(np.abs(X2 - X1), axis=1)\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unsupported distance metric: {self.distance_metric}\")\n",
+    "    \n",
     "    def est_probability(self, X):\n",
     "        return np.apply_along_axis(self.est_probability2, 1, X.values)\n",
     "\n",
@@ -38,13 +48,6 @@
     "        k_nearest_labels = self.y_train.iloc[k_indices]\n",
     "        return np.mean(k_nearest_labels)\n",
     "\n",
-    "    def compute_distance(self, X1, X2):\n",
-    "        if self.distance_metric == 'euclidean':\n",
-    "            return np.linalg.norm(X2 - X1, axis=1)  # Use numpy's built-in norm for clarity\n",
-    "        elif self.distance_metric == 'manhattan':\n",
-    "            return np.sum(np.abs(X2 - X1), axis=1)\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unsupported distance metric: {self.distance_metric}\")\n",
     "\n",
     "def preprocess_data(train_path, test_path):\n",
     "    train_data = pd.read_csv(train_path)\n",
@@ -80,12 +83,12 @@
     "        \n",
     "        knn.fit(X_train, y_train)\n",
     "        y_est_prob = knn.est_probability(X_val)\n",
-    "        score = roc_auc_score(y_val, y_est_prob)\n",
+    "        score = calc_score(y_val, y_est_prob)\n",
     "        scores.append(score)\n",
     "    \n",
     "    return scores\n",
     "\n",
-    "def roc_auc_score(y_true, y_est_prob):\n",
+    "def calc_score(y_true, y_est_prob):\n",
     "    positive_indices = np.where(y_true == 1)[0]\n",
     "    negative_indices = np.where(y_true == 0)[0]\n",
     "    \n",
